--- a/src/app/feature/dashboard/components/user-posts-details/user-posts-details.component.html
+++ b/src/app/feature/dashboard/components/user-posts-details/user-posts-details.component.html
@@ -1,5 +1,5 @@
 <div class="user-posts">
-  <mat-card class="user-posts__card">
+  <mat-card>
     <mat-card-header>
       <div class="user-posts__card-header">
         <div>
