--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
     routerLinkActive="nav-bar__tab--active"
     #dashboardLink="routerLinkActive"
   >
-    Dashboard (DI)
+    Dashboard
   </a>
 
   <a
@@ -17,6 +17,6 @@
     routerLinkActive="nav-bar__tab--active"
     #companyLink="routerLinkActive"
   >
-    Company (CD)
+    Company
   </a>
 </nav>
