--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @use 'styles/base/reset';
 @use 'styles/themes/themes';
+@use 'styles/components/card';
 
 html {
   font-family: Roboto, sans-serif;
