--- a/src/app/feature/company/components/company/company.component.scss
+++ b/src/app/feature/company/components/company/company.component.scss
@@ -4,11 +4,6 @@
   justify-content: center;
   align-items: center;
 
-  &__card {
-    min-width: 80%;
-    max-width: 80%;
-  }
-
   &__card-content {
     display: flex;
     justify-content: space-between;
@@ -18,6 +13,9 @@
   &__edit-company,
   &__create-company {
     width: 40%;
+    border: 1px solid grey;
+    border-radius: 4px;
+    padding: 8px;
   }
 
   &__create-company {
