--- a/src/app/feature/dashboard/components/user-list/user-list.component.html
+++ b/src/app/feature/dashboard/components/user-list/user-list.component.html
@@ -1,10 +1,10 @@
 <div class="user-list">
-  <mat-card class="user-list__card">
+  <mat-card>
     <mat-card-header>
       <div><h2>User List</h2></div>
     </mat-card-header>
     <mat-card-content>
-      <table mat-table [dataSource]="users | async" class="mat-elevation-z8">
+      <table mat-table [dataSource]="users$ | async" class="mat-elevation-z8">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let element">{{ element.name }}</td>
